<resources>
    <string name="app_name">Brand Makers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login"><u>LOGIN</u></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search_for_a_store">Search for a store..</string>
    <string name="view_store_near_me">View store near me</string>
    <string name="check_in">Check In</string>
    <string name="take_a_photo">TAKE A PHOTO</string>
    <string name="description">Have you greeted the Manager and asked permission to conduct your call?</string>
    <string name="photo_description">Please take a picture of the POS\next to the product in store.</string>
    <string name="comment">comment...</string>
    <string name="save">Save</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="forgot_your_passowrd">Forgot Your Passowrd</string>
    <string name="no_worries">No worries! Enter your email and we will send you a reset code</string>
    <string name="send_request">Send Request</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="reset_password">Reset Password</string>


    <string name="valid_email">Please enter a valid email.</string>
    <string name="empty_email">Please enter a email.</string>
    <string name="empty_password">Please enter a password.</string>
    <string name="valid_password">Password should be 8 characters minimum.</string>


</resources>
