<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red_dark"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/snow"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            />

        <TextView
            android:id="@+id/tb_text"
            style="@style/App_TextViewStyle_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lines="1"
            android:text="@string/reset_password"
            android:textSize="@dimen/txt_18" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/gl_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_50"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileImg"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        app:cardCornerRadius="@dimen/size_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_1" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_reset_password"
        android:layout_gravity="center"
        />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        style="@style/App_TextViewStyle_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_your_password"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_20"
        android:textSize="@dimen/txt_24"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImg" />

    <TextView
        android:id="@+id/textView5"
        style="@style/App_TextViewStyle_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="We have sent you verification code on your registerd email address. "
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <EditText
        android:id="@+id/et_code"
        style="@style/App_EditTextStyle_white_with_margin"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_40"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginBottom="60dp"
        android:background="@color/transparent"
        android:drawableStart="@drawable/ic_mail"
        android:hint="@string/verification_code"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toTopOf="@+id/bt_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.25" />


    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_code" />

    <EditText
        android:id="@+id/et_password"
        style="@style/App_EditTextStyle_white_with_margin"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_40"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:background="@color/transparent"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_code" />
    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/bt_reset"
        style="@style/App_ButtonStyle_primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_40"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/button_round_white"
        android:text="@string/reset_password"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
