<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_grey"
    android:orientation="vertical"
   >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/size_5"
        android:layout_margin="@dimen/margin_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_10"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_title"
                style="@style/App_TextViewStyle_font_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_7"
                android:text="@string/photo_description"
                android:textColor="@color/text_color_hint"
                android:gravity="center"
                android:textSize="@dimen/txt_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/dotted"
                android:layerType="software"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_2"
                android:layout_width="@dimen/size_250"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/gray_too_light"
                app:cardCornerRadius="@dimen/size_5"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/icon_size_110"
                    android:layout_margin="@dimen/margin_20"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_mail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_pic"
                style="@style/App_TextViewStyle_font_bold"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center"
                android:padding="@dimen/padding_7"
                android:text="@string/take_a_photo"
                android:textColor="@color/red_dark"
                android:textSize="@dimen/txt_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_2" />


            <Button
                android:id="@+id/button"
                style="@style/App_ButtonStyle"
                android:layout_width="@dimen/size_200"
                android:layout_height="@dimen/button_35"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@drawable/button_round_red"
                android:text="@string/check_in"
                android:textSize="@dimen/txt_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pic"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
